# markdown-notes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rebuild-cache.sh
src/: main.cpp
src/editor/: editor.cpp  editor.hpp
src/editor/widgets/save_area/: save_area.cpp  save_area.hpp
src/editor/widgets/text_area/: text_area.cpp  text_area.hpp
